# inplace-vec-builder

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs
