[package]
name = "inplace-vec-builder"
version = "0.1.0"
edition = "2021"

[features]
stdvec = []
default = ["stdvec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "1.7.0", optional = true }

[dev-dependencies]
testdrop = "0.1.2"
